--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Jekyll::Thumbor</title>
 
   <!-- Flatdoc -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
 
@@ -24,12 +24,12 @@
 
   <!-- Meta -->
   <meta content="Jekyll::Typogrify" property="og:title">
-  <meta content="A Jekyll plugin that bring the functions of typogruby." name="description">
+  <meta content="A Jekyll template tag for Thumbor imaging service." name="description">
 
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('myles/jekyll-typogrify')
+      fetcher: Flatdoc.github('myles/jekyll-thumbor')
     });
   </script>
 </head>
@@ -39,21 +39,21 @@
     <div class="left">
       <h1>Jekyll::Thumbor</h1>
       <ul>
-        <li><a href='https://github.com/myles/jekyll-thumbor'>View on GitHub</a></li>
-        <li><a href='https://github.com/myles/jekyll-thumbor/issues'>Issues</a></li>
+        <li><a href="https://github.com/myles/jekyll-thumbor">View on GitHub</a></li>
+        <li><a href="https://github.com/myles/jekyll-thumbor/issues">Issues</a></li>
       </ul>
     </div>
-    <div class='right'>
+    <div class="right">
       <!-- GitHub buttons: see http://ghbtns.com -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=myles&amp;repo=jekyll-typogrify&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=myles&amp;repo=jekyll-thumbor&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
 
-  <div class='content-root'>
-    <div class='menubar'>
-      <div class='menu section' role='flatdoc-menu'></div>
+  <div class="content-root">
+    <div class="menubar">
+      <div class="menu section" role="flatdoc-menu"></div>
     </div>
-    <div role='flatdoc-content' class='content'></div>
+    <div role="flatdoc-content" class="content"></div>
   </div>
 
   <script>
