--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
 
-  <title>Jekyll::Thumbor</title>
+  <title>Jekyll::ThumborTag</title>
 
   <!-- Flatdoc -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -23,7 +23,7 @@
   </style>
 
   <!-- Meta -->
-  <meta content="Jekyll::Typogrify" property="og:title">
+  <meta content="Jekyll::ThumborTag" property="og:title">
   <meta content="A Jekyll template tag for Thumbor imaging service." name="description">
 
   <!-- Initializer -->
@@ -37,7 +37,7 @@
 
   <div class="header">
     <div class="left">
-      <h1>Jekyll::Thumbor</h1>
+      <h1>Jekyll::ThumborTag</h1>
       <ul>
         <li><a href="https://github.com/myles/jekyll-thumbor">View on GitHub</a></li>
         <li><a href="https://github.com/myles/jekyll-thumbor/issues">Issues</a></li>
